--- a/test/Makefile
+++ b/test/Makefile
@@ -113,7 +113,8 @@ PROGRAMS = unknownhost
 else
 # change this if you create a new test program!
 #PROGRAMS = add halt shell matmult sort segments test1 test2 a
-PROGRAMS = add halt createFile fileIO_test1 fileIO_test2 LotOfAdd
+#PROGRAMS = add halt createFile fileIO_test1 fileIO_test2 LotOfAdd
+PROGRAMS = consoleIO_test1 consoleIO_test2
 endif
 
 all: $(PROGRAMS)
@@ -202,6 +203,11 @@ createFile: createFile.o start.o
 	$(LD) $(LDFLAGS) start.o createFile.o -o createFile.coff
 	$(COFF2NOFF) createFile.coff createFile
 
+mytest.o: mytest.c
+	$(CC) $(CFLAGS) -c mytest.c
+mytest: mytest.o start.o
+	$(LD) $(LDFLAGS) start.o mytest.o -o mytest.coff
+	$(COFF2NOFF) mytest.coff mytest
 
 clean:
 	$(RM) -f *.o *.ii
@@ -209,6 +215,7 @@ clean:
 
 distclean: clean
 	$(RM) -f $(PROGRAMS)
+	$(RM) -f *.test
 
 unknownhost:
 	@echo Host type could not be determined.
