--- a/test/Makefile
+++ b/test/Makefile
@@ -114,7 +114,7 @@ else
 # change this if you create a new test program!
 #PROGRAMS = add halt shell matmult sort segments test1 test2 a
 #PROGRAMS = add halt createFile fileIO_test1 fileIO_test2 LotOfAdd
-PROGRAMS = consoleIO_test1 consoleIO_test2
+PROGRAMS = consoleIO_test1 consoleIO_test2 consoleIO_test3 MP2_MLE_test MP2_array_test MP2_array_test2 MP2_readonly_test
 endif
 
 all: $(PROGRAMS)
@@ -203,11 +203,30 @@ createFile: createFile.o start.o
 	$(LD) $(LDFLAGS) start.o createFile.o -o createFile.coff
 	$(COFF2NOFF) createFile.coff createFile
 
-mytest.o: mytest.c
-	$(CC) $(CFLAGS) -c mytest.c
-mytest: mytest.o start.o
-	$(LD) $(LDFLAGS) start.o mytest.o -o mytest.coff
-	$(COFF2NOFF) mytest.coff mytest
+MP2_array_test: MP2_array_test.c
+	$(CC) $(CFLAGS) -c MP2_array_test.c
+MP2_array_test: MP2_array_test.o start.o
+	$(LD) $(LDFLAGS) start.o MP2_array_test.o -o MP2_array_test.coff
+	$(COFF2NOFF) MP2_array_test.coff MP2_array_test
+
+MP2_array_test2: MP2_array_test2.c
+	$(CC) $(CFLAGS) -c MP2_array_test2.c
+MP2_array_test2: MP2_array_test2.o start.o
+	$(LD) $(LDFLAGS) start.o MP2_array_test2.o -o MP2_array_test2.coff
+	$(COFF2NOFF) MP2_array_test2.coff MP2_array_test2
+
+MP2_readonly_test: MP2_readonly_test.c
+	$(CC) $(CFLAGS) -c MP2_readonly_test.c
+MP2_readonly_test: MP2_readonly_test.o start.o
+	$(LD) $(LDFLAGS) start.o MP2_readonly_test.o -o MP2_readonly_test.coff
+	$(COFF2NOFF) MP2_readonly_test.coff MP2_readonly_test
+
+MP2_MLE_test: MP2_MLE_test.c
+	$(CC) $(CFLAGS) -c MP2_MLE_test.c
+MP2_MLE_test: MP2_MLE_test.o start.o
+	$(LD) $(LDFLAGS) start.o MP2_MLE_test.o -o MP2_MLE_test.coff
+	$(COFF2NOFF) MP2_MLE_test.coff MP2_MLE_test
+
 
 clean:
 	$(RM) -f *.o *.ii
@@ -215,7 +234,6 @@ clean:
 
 distclean: clean
 	$(RM) -f $(PROGRAMS)
-	$(RM) -f *.test
 
 unknownhost:
 	@echo Host type could not be determined.
